# prospero

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md
.github/: labels.yml
.github/workflows/: add-to-project.yml  ci.yml  docs.yml  label-sync.yml  release-image.yml  triage-commands.yml  triage-needs-triage.yml
crates/api/: Cargo.toml
crates/api/dashboard/: app.js  index.html
crates/api/src/: dashboard.rs  dto.rs  error.rs  handlers.rs  lib.rs  sse.rs
crates/api/src/sse/: tail.rs
crates/api/tests/: api_integration.rs  k8s_backend.rs
crates/cli/: Cargo.toml
crates/cli/src/: client.rs  main.rs
crates/cli/tests/: e2e_smoke.rs
crates/core/: Cargo.toml
crates/core/src/: bus.rs  config_store.rs  discovery.rs  distributed_bus.rs  error.rs  event.rs  fleet.rs  fleet_provider.rs  leased_ownership.rs  lib.rs  metrics.rs  model.rs  ownership.rs  pg.rs  postgres_config_store.rs  postgres_store.rs  provider_env.rs  registry.rs  sqlite_store.rs  store.rs  testkit.rs
crates/core/src/caliband/: client.rs  mod.rs  sources.rs  stream.rs  transport.rs  wire.rs
crates/core/src/k8s/: crd.rs  fake.rs  fleet.rs  mod.rs  workspace_api.rs
crates/core/tests/: fleet_integration.rs  k8s_session_plane.rs  k8s_session_plane_tcp.rs
crates/core/tests/fixtures/: operator-calibantask.yaml  operator-workspace.yaml
crates/daemon/: Cargo.toml
crates/daemon/src/: main.rs
crates/types/: Cargo.toml
crates/types/src/: event.rs  lib.rs  model.rs
docs/: container.md  releasing.md
docs/adr/: 0001-record-architecture-decisions.md  0002-control-plane-over-caliband.md  0003-couple-to-caliban-via-ndjson-wire-format.md  0004-hybrid-live-and-durable-observability.md  0005-worktree-isolation-by-default-for-spawns.md  0006-layered-crate-boundaries.md  0007-fake-caliban-test-harness.md  0008-k8s-fleet-backend.md  0009-agpl-3.0-only-license.md  README.md  template.md
docs/evaluation/: README.md
docs/evaluation/competitors/openclaw/: capability-inventory.md  parity-gap-matrix.md
docs/guide/: book.toml  sync-adrs.sh  sync-changelog.sh
docs/guide/src/: SUMMARY.md  introduction.md  principles.md
docs/superpowers/plans/: 2026-06-05-prospero-framework.md  2026-06-07-dashboard-control-plane.md  2026-06-08-per-repo-provider-config.md  2026-06-11-interactive-agent-control.md  2026-06-13-dashboard-polish.md  2026-06-13-sse-lagged-gap-self-heal.md  2026-06-17-event-store-phase-0-seams.md  2026-06-17-event-store-phase-1a-async-store.md  2026-06-18-event-store-phase-1b-sqlite-store.md  2026-06-18-event-store-phase-1c-config-store.md  2026-06-18-event-store-phase-1d-retention.md  2026-06-18-event-store-phase-2a-postgres-backends.md  2026-06-18-event-store-phase-2b-distributed-bus.md  2026-06-18-event-store-phase-2c-leased-ownership.md  2026-06-18-event-store-phase-2d-daemon-topology.md  2026-06-19-cluster-lifecycle-dedup.md  2026-07-04-caliband-network-transport.md  2026-07-04-k8s-fleet.md  2026-07-05-api-backend-seam.md  2026-07-05-deflake-full-stack.md  2026-07-05-harden-k8s-session-plane.md  2026-07-05-k8s-no-fleetmanager.md  2026-07-05-k8s-session-plane-tls-config.md  2026-07-05-prospero-types-extraction.md  2026-07-05-richer-dashboard-timeline.md  2026-07-05-workspace-scoped-discovery.md  2026-07-15-live-cluster-spawn-fixes.md
docs/superpowers/specs/: 2026-06-05-prospero-framework-design.md  2026-06-07-dashboard-control-plane-design.md  2026-06-08-per-repo-provider-config-design.md  2026-06-11-interactive-agent-control-handoff.md  2026-06-13-dashboard-polish-design.md  2026-06-13-sse-lagged-gap-self-heal-design.md  2026-06-17-event-store-topology-design.md  2026-06-17-event-store-topology-handoff.md  2026-06-19-cluster-lifecycle-dedup-design.md  2026-07-04-caliband-network-transport-design.md  2026-07-05-api-backend-seam-design.md  2026-07-05-deflake-full-stack-design.md  2026-07-05-harden-k8s-session-plane-design.md  2026-07-05-k8s-no-fleetmanager-design.md  2026-07-05-k8s-session-plane-tls-config-design.md  2026-07-05-prospero-types-extraction-design.md  2026-07-05-richer-dashboard-timeline-design.md  2026-07-05-workspace-scoped-discovery-design.md  2026-07-06-spawn-frontmatter-design.md  2026-07-12-k8s-config-plane-phase-c-design.md  2026-07-14-k8s-interactive-status-design.md  2026-07-15-live-cluster-spawn-fixes-design.md  2026-07-18-k8s-spawn-agent-159-design.md
scripts/: coverage-report.py  coverage.sh
