[package]
name = "prospero-api"
version.workspace = true
edition.workspace = true

[dependencies]
prospero-core.workspace = true
axum.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
prospero-core = { workspace = true, features = ["testkit"] }
tokio = { workspace = true, features = ["test-util"] }
tower = "0.5"
tempfile.workspace = true
http-body-util = "0.1"
