[package]
name = "prospero-api"
version.workspace = true
edition.workspace = true

[features]
# Enables the k8s-backend integration test (`tests/k8s_backend.rs`), which needs
# prospero-core's `k8s` module. Gated behind a feature so the coverage build
# (prospero-core/testkit only, no k8s) still compiles; CI's test gate turns it on
# (see ci.yml `TESTKIT`). (#76)
k8s = ["prospero-core/k8s"]

[dependencies]
prospero-core.workspace = true
axum.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
async-stream = { workspace = true }
async-trait = { workspace = true }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
prospero-core = { workspace = true, features = ["testkit"] }
tokio = { workspace = true, features = ["test-util"] }
tower = "0.5"
tempfile.workspace = true
http-body-util = "0.1"
