[package]
name = "prospero-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "prospero"
path = "src/main.rs"

[dependencies]
prospero-core.workspace = true
clap.workspace = true
ureq.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true

[dev-dependencies]
prospero-core = { workspace = true, features = ["testkit"] }
prospero-api.workspace = true
tokio.workspace = true
axum.workspace = true
tempfile.workspace = true
