[package]
name = "prospero-core"
version.workspace = true
edition.workspace = true

# `cargo llvm-cov` compiles with `--cfg coverage`; declare it so the normal
# (non-coverage) build doesn't trip the `unexpected_cfgs` lint under `-D warnings`.
# Used by a couple of live LISTEN/NOTIFY tests that are `#[cfg_attr(coverage, ignore)]`
# (their doorbell timing is unreliable under instrumentation — see distributed_bus.rs).
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)', 'cfg(coverage_nightly)'] }

[features]
# Test/integration harness reused by other crates' tests (FakeCaliband).
# `rcgen` backs the TCP+TLS fake's self-signed cert; `tempfile` its per-agent
# socket dir.
testkit = ["dep:tempfile", "dep:rcgen"]
# Kubernetes FleetProvider backend (K8sFleet, CalibanTask CR mirror). Pulls
# `kube`/`k8s-openapi`; `LocalFleet`-only builds stay free of them.
k8s = ["dep:kube", "dep:k8s-openapi", "dep:schemars"]

[dependencies]
prospero-types.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
sha2.workspace = true
hex.workspace = true
chrono.workspace = true
tempfile = { workspace = true, optional = true }
rcgen = { workspace = true, optional = true }
async-trait.workspace = true
sqlx = { workspace = true }
tokio-stream.workspace = true
async-stream = { workspace = true }
futures.workspace = true
tokio-rustls.workspace = true
kube = { workspace = true, optional = true }
k8s-openapi = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile.workspace = true
serde_json.workspace = true
rcgen.workspace = true
serde_yaml.workspace = true
