[package]
name = "prospero-daemon"
version.workspace = true
edition.workspace = true

[[bin]]
name = "prosperod"
path = "src/main.rs"

[features]
# Compile in the `K8sFleet` backend library (crates/core, feature "k8s") and
# wire it into prosperod's `PROSPERO_FLEET=k8s` arm (needs the `kube` client to
# reach the api-server). See main.rs.
k8s = ["prospero-core/k8s", "dep:kube"]

[dependencies]
prospero-core.workspace = true
prospero-api.workspace = true
tokio.workspace = true
axum.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
kube = { workspace = true, optional = true }
